#108 Fix mappings in EmlFactory
* relatedProject: description instead of abstract
* salutation
* small refactoring